--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>sandeep.site</title>
 </head>
 <body>
-    Hi! I'm Sandeep
+    Hi! I'm Sandeep pursuing btech from LNCT Bhopal
 </body>
 </html>
