--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>sandeep.site</title>
 </head>
 <body>
-    Hi! I'm Sandeep pursuing btech from LNCT Bhopal.
+    Hi! I'm sandeep pursuing btech from LNCT Bhopal.
     and my enrollment no. is 0103CS201145 
 </body>
 </html>
