newdata about strength

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     Hi! I'm sandeep pursuing btech from LNCT Bhopal.
     and my enrollment no. is 0103CS201145 
+    sandeep's section has strength of 55 students.
 </body>
 </html>
