--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     Hi! I'm sandeep pursuing btech from LNCT Bhopal.
     and my enrollment no. is 0103CS201145 
     My scholar no. is 02-20-079
+    he takes class only related to computer science subjects.
 </body>
 </html>
